[gd_scene load_steps=19 format=3 uid="uid://h6xn44er5mhs"]

[ext_resource type="Script" path="res://Scenes/Scenario/singleplayer.gd" id="1_1skm5"]
[ext_resource type="Texture2D" uid="uid://bykyggb5t6vb7" path="res://Assets/Scenario/Road.png" id="2_aaixt"]
[ext_resource type="PackedScene" uid="uid://cetf8grnsexr5" path="res://Scenes/Characters/Player/ChickenPlayer.tscn" id="3_mkuux"]
[ext_resource type="PackedScene" uid="uid://c4wdi7qi73uj5" path="res://Scenes/Scenario/VictoryLine.tscn" id="4_rxc3i"]
[ext_resource type="FontFile" uid="uid://bar3txxarkntj" path="res://Assets/Fonts/GamegirlClassic-9MVj.ttf" id="5_t5c57"]
[ext_resource type="FontFile" uid="uid://x2h56im3stvs" path="res://Assets/Fonts/EnterCommand.ttf" id="5_wi54c"]
[ext_resource type="FontFile" uid="uid://yer46p5f54ad" path="res://Assets/Fonts/alterebro-pixel-font.ttf" id="6_aruy8"]
[ext_resource type="StyleBox" uid="uid://htgk60qdejly" path="res://Assets/non_selected_button.tres" id="7_bhh86"]
[ext_resource type="PackedScene" uid="uid://dl3idxfm4f7vw" path="res://Scenes/UI/Pause Menu/pause_menu.tscn" id="8_dk1p5"]
[ext_resource type="PackedScene" uid="uid://c7imfnnvbn0hk" path="res://Scenes/UI/Ingame/warning_manager.tscn" id="9_hbx3o"]
[ext_resource type="AudioStream" uid="uid://8o8wkl2em38r" path="res://Soundtrack/ideiagalinha2.ogg" id="10_xc3sd"]
[ext_resource type="PackedScene" uid="uid://cpcnr11r8bi4g" path="res://Scenes/UI/Leaderboard/leaderboard.tscn" id="11_wodyb"]
[ext_resource type="PackedScene" uid="uid://cpq7tfbnqb4fp" path="res://Scenes/UI/Leaderboard/input_score.tscn" id="12_7pkd6"]
[ext_resource type="AudioStream" uid="uid://bdc4pdw3gpq32" path="res://Soundtrack/gameover.ogg" id="14_qapeb"]
[ext_resource type="AudioStream" uid="uid://7weisdcgjy7g" path="res://Soundtrack/galinha_score.ogg" id="15_ht6mx"]
[ext_resource type="AudioStream" uid="uid://dm78gif2xierm" path="res://Soundtrack/galinha2.ogg" id="15_t0lvy"]
[ext_resource type="Texture2D" uid="uid://b2gkj3b721hcn" path="res://Assets/Interface/FreeWayHeart.png" id="16_2s6ug"]
[ext_resource type="AudioStream" uid="uid://dqbuu3qb2m5ti" path="res://Soundtrack/galinha_score_10.ogg" id="16_ths1q"]

[node name="SingleplayerMode" type="Node2D"]
script = ExtResource("1_1skm5")

[node name="Road" type="Sprite2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(0.188235, 0.0882353)
texture = ExtResource("2_aaixt")

[node name="ChickenPlayer" parent="." instance=ExtResource("3_mkuux")]
position = Vector2(160, 174)

[node name="TimerFastRoad" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerSlowRoad" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VictoryLine" parent="." instance=ExtResource("4_rxc3i")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="EndScreen" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 34.0
offset_right = -79.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndScreen"]
layout_mode = 2
alignment = 1

[node name="GameOver" type="Label" parent="UI/EndScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("5_t5c57")
text = "GAME OVER!"

[node name="ScoreButton" type="Button" parent="UI/EndScreen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_aruy8")
theme_override_styles/normal = ExtResource("7_bhh86")
text = "Submeter Pontuação"

[node name="PlayAgain" type="Button" parent="UI/EndScreen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_aruy8")
theme_override_styles/normal = ExtResource("7_bhh86")
text = "Jogar Novamente"

[node name="BackToMenu" type="Button" parent="UI/EndScreen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_aruy8")
theme_override_styles/normal = ExtResource("7_bhh86")
text = "Voltar ao Menu"

[node name="Scoreboard" type="Label" parent="UI"]
offset_left = 160.0
offset_top = -2.0
offset_right = 170.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("5_wi54c")
theme_override_font_sizes/font_size = 0
text = "0"

[node name="Health" type="Label" parent="UI"]
visible = false
offset_left = 232.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("5_wi54c")
text = "Lives Left: 5"

[node name="TimerEvento" type="Label" parent="UI"]
visible = false
offset_left = 232.0
offset_top = 30.0
offset_right = 440.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("5_wi54c")
text = "EVENT TIME: 5"

[node name="Menu" type="Button" parent="UI"]
offset_left = 290.0
offset_top = 2.0
offset_right = 311.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("5_wi54c")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = ExtResource("7_bhh86")
text = "Menu"

[node name="Pause Menu" parent="UI" instance=ExtResource("8_dk1p5")]
visible = false

[node name="WarningManager" parent="UI" instance=ExtResource("9_hbx3o")]
visible = false

[node name="Fullscreen" type="Button" parent="UI"]
offset_left = 235.0
offset_top = 2.0
offset_right = 286.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("5_wi54c")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = ExtResource("7_bhh86")
text = "Fullscreen (F4)"

[node name="Leaderboard" parent="UI" instance=ExtResource("11_wodyb")]
visible = false

[node name="InputScore" parent="UI" instance=ExtResource("12_7pkd6")]
visible = false

[node name="Lives" type="TextureRect" parent="UI"]
offset_left = 3.0
offset_right = 19.0
offset_bottom = 16.0
texture = ExtResource("16_2s6ug")
stretch_mode = 1

[node name="TimerEvent" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="SingleplayerTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_xc3sd")
autoplay = true

[node name="ScoredSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_ht6mx")

[node name="Scored10SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_ths1q")

[node name="EventDuration" type="Timer" parent="."]
wait_time = 10.0

[node name="GameOverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_qapeb")

[node name="GameOverTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_t0lvy")
volume_db = 10.0

[connection signal="game_over" from="." to="UI/Pause Menu" method="_on_singleplayer_mode_game_over"]
[connection signal="invert_event" from="." to="ChickenPlayer" method="_on_singleplayer_mode_invert_event"]
[connection signal="player_can_move" from="." to="ChickenPlayer" method="_on_singleplayer_mode_player_can_move"]
[connection signal="player_cant_move" from="." to="ChickenPlayer" method="_on_singleplayer_mode_player_cant_move"]
[connection signal="show_leaderboard" from="." to="UI/Leaderboard" method="_on_singleplayer_mode_show_leaderboard"]
[connection signal="slow_event" from="." to="ChickenPlayer" method="_on_singleplayer_mode_slow_event"]
[connection signal="stuck_event" from="." to="ChickenPlayer" method="_on_singleplayer_mode_stuck_event"]
[connection signal="damage" from="ChickenPlayer" to="." method="_on_chicken_player_damage"]
[connection signal="scored" from="ChickenPlayer" to="." method="_on_chicken_player_scored"]
[connection signal="timeout" from="TimerFastRoad" to="." method="_on_timer_fast_road_timeout"]
[connection signal="timeout" from="TimerSlowRoad" to="." method="_on_timer_slow_road_timeout"]
[connection signal="pressed" from="UI/EndScreen/VBoxContainer/ScoreButton" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="UI/EndScreen/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/EndScreen/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="UI/Menu" to="UI/Pause Menu" method="_on_menu_pressed"]
[connection signal="pressed" from="UI/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="go_back" from="UI/Leaderboard" to="." method="_on_leaderboard_go_back"]
[connection signal="exit_pressed" from="UI/InputScore" to="." method="_on_input_score_exit_pressed"]
[connection signal="score_submit" from="UI/InputScore" to="." method="_on_input_score_score_submit"]
[connection signal="timeout" from="TimerEvent" to="." method="_on_timer_event_timeout"]
